--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^3.23.0",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.3",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
